services/api.yaml
---
# Screwdriver API service definition
apiVersion: v1
kind: Service
metadata:
  name: sdapi
  namespace: default
  labels:
    app: screwdriver
    tier: api
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: screwdriver
    tier: api

---
# Screwdriver API deployment definition
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: sdapi
  namespace: default
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: screwdriver
      tier: api
  template:
    metadata:
      labels:
        app: screwdriver
        tier: api
    spec:
      serviceAccount: sd-build
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs
        - name: cloudsql
          emptyDir: {}
      containers:
      # coludsql proxy container settings
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
                    "--dir=/cloudsql",
                    "-instances=<INSTANCE_CONNECTION_NAME>=tcp:3306", # TODO: change instances to your INSTANCE_CONNECTION_NAME
                    "-credential_file=/secrets/cloudsql/credentials.json"]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
            - name: ssl-certs
              mountPath: /etc/ssl/certs
            - name: cloudsql
              mountPath: /cloudsql
        # screwdriver api container settings
        - name: screwdriver-api
          image: screwdrivercd/screwdriver:v0.5.185
          ports:
          - containerPort: 80
          # Validate that the service is started
          livenessProbe:
            httpGet:
              path: /v4/status
              port: 80
            initialDelaySeconds: 15
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /v4/status
              port: 80
            initialDelaySeconds: 15
            timeoutSeconds: 1
          # Environment variables that point to your secrets in your secrets.yaml
