services/redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sd-redis
  labels:
    app: sd-redis
spec:
  ports:
  - port: 6379
    name: master
  clusterIP: None
  selector:
    name: sd-redis-master
---
# Kubernetes >= 1.6
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: sd-redis-master
spec:
  serviceName: "sd-redis"
  replicas: 1
  template:
    metadata:
      labels:
        name: sd-redis-master
        app: sd-redis
    spec:
      containers:
        - name: master
          image: redis:4
          command: [
            'sh', '-c',
            'redis-server /redis-conf/redis-master.conf --protected-mode no'
            ]
          ports:
            - containerPort: 6379
              name: master
          volumeMounts:
            - mountPath: /redis-master-data
              name: redis-data
              subPath: master
            - mountPath: /redis-conf
              name: redis-conf
      volumes:
        - name: redis-config-map
          configMap:
            name: sd-redis-master-conf
        - name: redis-conf
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: redis-data
        annotations:
          volume.beta.kubernetes.io/storage-class: basic
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
