services/store.yaml
---
# Screwdriver Artifact Store service definition
apiVersion: v1
kind: Service
metadata:
  name: sdstore
  namespace: default
  labels:
    app: screwdriver
    tier: store
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: screwdriver
    tier: store

---
# Screwdriver Artifact Store deployment definition
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: sdstore
  namespace: default
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: screwdriver
      tier: store
  template:
    metadata:
      labels:
        app: screwdriver
        tier: store
    spec:
      containers:
      - name: screwdriver-store
        # Screwdriver API Docker image to use
        # https://hub.docker.com/r/screwdrivercd/store
        image: screwdrivercd/store:v2.2.2
        ports:
        - containerPort: 80
        # Validate that the service is started
        livenessProbe:
          httpGet:
            path: /v1/status
            port: 80
          initialDelaySeconds: 15
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /v1/status
            port: 80
          initialDelaySeconds: 15
          timeoutSeconds: 1
        # Environment variables that point to your secrets in your secrets.yaml
