services/ui.yaml
---
# Screwdriver UI service definition
apiVersion: v1
kind: Service
metadata:
  name: sdui
  namespace: default
  labels:
    app: screwdriver
    tier: ui
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: screwdriver
    tier: ui

---
# Screwdriver UI deployment definition
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: sdui
  namespace: default
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: screwdriver
      tier: ui
  template:
    metadata:
      labels:
        app: screwdriver
        tier: ui
    spec:
      containers:
      - name: screwdriver-ui
        # Screwdriver API Docker image to use
        # https://hub.docker.com/r/screwdrivercd/ui
        image: screwdrivercd/ui:v1.0.213
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          timeoutSeconds: 1
